--- a/task_1.html
+++ b/task_1.html
@@ -63,7 +63,7 @@
             }
 
             table.appendChild(tbody);
-            document.body.appendChild(table);
+            document.body.prepend(table);
         }
 
         createChessBoard();
